conf/envoy/example.yml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
  access_log:
    - name: envoy.access_loggers.stdout
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
static_resources:
  listeners:
    - name: nakama_public_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7350
      filter_chains:
        - name: nakama_public_http_websocket
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: nakama_public_http_websocket_stat
                upgrade_configs:
                  - upgrade_type: websocket
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: nakama_public_http_websocket_route
                  virtual_hosts:
                    - name: nakama_public_http_websocket_host
                      domains: ["*"]
                      routes:
                        - match:
                            path: "/ws"
                          route:
                            host_rewrite_literal: nakama.midnight.why
                            cluster: nakama_public_http_cluster
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: nakama.midnight.why
                            cluster: nakama_public_http_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "/etc/ssl/cert.pem" }
                    private_key: { filename: "/etc/ssl/privkey.pem" }


    - name: nakama_console_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7351
      filter_chains:
        - name: nakama_console_http_api
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: nakama_console_http_api_stat
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: nakama_console_http_api_route
                  virtual_hosts:
                    - name: nakama_console_http_api_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: nakama.midnight.why
                            cluster: nakama_console_http_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain: { filename: "/etc/ssl/cert.pem" }
                    private_key: { filename: "/etc/ssl/privkey.pem" }
                alpn_protocols: ["h2", "http/1.1"]

    - name: nakama_public_grpc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7349
      filter_chains:
        - name: nakama_public_grpc_api
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: nakama_public_grpc_api_stat
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: nakama_public_grpc_api_route
                  virtual_hosts:
                    - name: nakama_public_grpc_api_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            host_rewrite_literal: nakama.midnight.why
                            cluster: nakama_public_grpc_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "/etc/ssl/cert.pem" }
                    private_key: { filename: "/etc/ssl/privkey.pem" }

    - name: nakama_console_grpc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7348
      filter_chains:
        - name: nakama_console_grpc_api
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: nakama_console_grpc_api_stat
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: nakama_console_grpc_api_route
                  virtual_hosts:
                    - name: nakama_console_grpc_api_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            host_rewrite_literal: nakama.midnight.why
                            cluster: nakama_console_grpc_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "/etc/ssl/cert.pem" }
                    private_key: { filename: "/etc/ssl/privkey.pem" }

  clusters:
    - name: nakama_public_http_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      circuit_breakers:
        thresholds:
          max_connections: 10000
          max_pending_requests: 10000
          max_requests: 10000
      connection_pool_per_downstream_connection: true
      common_http_protocol_options:
        idle_timeout: 10s
      lb_policy: least_request
      load_assignment:
        cluster_name: nakama_public_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nakama
                      port_value: 7350

    - name: nakama_console_http_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      circuit_breakers:
        thresholds:
          max_connections: 10000
          max_pending_requests: 10000
          max_requests: 10000
      connection_pool_per_downstream_connection: true
      common_http_protocol_options:
        idle_timeout: 10s
      lb_policy: least_request
      load_assignment:
        cluster_name: nakama_public_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nakama
                      port_value: 7351

    - name: nakama_public_grpc_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      circuit_breakers:
        thresholds:
          max_connections: 10000
          max_pending_requests: 10000
          max_requests: 10000
      connection_pool_per_downstream_connection: true
      common_http_protocol_options:
        idle_timeout: 10s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: nakama.midnight.why
          common_tls_context:
            alpn_protocols: ["h2"]
            validation_context:
              match_subject_alt_names:
                - exact: "nakama.midnight.why"
              trusted_ca:
                filename: /etc/ssl/ca.pem
      lb_policy: least_request
      load_assignment:
        cluster_name: nakama_public_grpc_api_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nakama
                      port_value: 7349

    - name: nakama_console_grpc_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      circuit_breakers:
        thresholds:
          max_connections: 10000
          max_pending_requests: 10000
          max_requests: 10000
      connection_pool_per_downstream_connection: true
      common_http_protocol_options:
        idle_timeout: 10s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: nakama.midnight.why
          common_tls_context:
            alpn_protocols: ["h2"]
            validation_context:
              match_subject_alt_names:
                - exact: "nakama.midnight.why"
              trusted_ca:
                filename: /etc/ssl/ca.pem
      lb_policy: least_request
      load_assignment:
        cluster_name: nakama_console_grpc_api_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nakama
                      port_value: 7348
